src/snapshots/jjpwrgem__cli__tests__object_double_open_curly.snap
---
source: src/cli.rs
expression: annotated
---
error: expected key or closed curly brace, found `{`
 --> stdin:1:2
  |
1 | {{
  | -^
  | |
  | expected due to `{`
